--- a/style.css
+++ b/style.css
@@ -9,3 +9,15 @@ h1 {
   font-style: italic;
   color: #373fff;
 }
+
+.embla {
+  overflow: hidden;
+}
+.embla__container {
+  display: flex;
+}
+.embla__slide {
+  position: relative;
+  flex: 0 0 100%;
+  border:2px solid black;
+}
