--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background:
+  background:#cf536d;
 }
 
 h1 {
@@ -13,8 +13,9 @@ h1 {
 
 .embla {
   position:absolute;
-  overflow: hidden;
   width:250px;
+  overflow:hidden;
+  padding:10px;
   height:400px;
   left:50%;
   top:50%;
@@ -22,13 +23,14 @@ h1 {
 }
 .embla__container {
   display: flex;
+  height:100%;
 }
 .embla__slide {
+  margin:10px;
   background:white;
   position: relative;
   flex: 0 0 100%;
-  height:400px;
   border-radius:5px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 12px 18px 0 rgba(0,0,0,0.2);
   
 }
