💐💰 Checkpoint ./index.html:633222/564 ./script.js:633222/555 ./.glitch-assets:633222/373 ./style.css:633222/113

--- a/style.css
+++ b/style.css
@@ -66,9 +66,9 @@ h1 {
   z-index: 10;
 }
 .avatar {
-  background: #fff;
   width: 240px;
   height: 440px;
+  padding:50px 0px 50px 0px;
   display: block;
   margin-top: 10px;
   margin-left: 10px;
